feat: functioning v1 state (see scribblehub-scraper for proper PRs)
